--- a/Renamer/Renamer/Form1.resx
+++ b/Renamer/Renamer/Form1.resx
@@ -129,6 +129,17 @@
   <metadata name="timer3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>360, 17</value>
   </metadata>
+  <metadata name="mainMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>447, 17</value>
+  </metadata>
+  <data name="label34.Text" xml:space="preserve">
+    <value>A Little Fun 'n' Lazy Weekend Project Which Made It Into v0.2!
+I Just Made This To Tiddy Up Some Of My Files
+But Because Some People Found It Useful
+I Updated It And I Guess I'll Keep Updating It For a While.
+
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
